--- a/Quotables/Base.lproj/Main.storyboard
+++ b/Quotables/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="6ud-Dy-eC3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Quotables-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="RootViewController" customModule="Quotables" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="180" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hpF-gR-J08">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="QuoteCell" rowHeight="180" id="g8G-lY-j0t">
@@ -57,7 +57,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="sr9-JX-sDG" kind="presentation" modalTransitionStyle="flipHorizontal" id="esk-8h-vod"/>
+                                            <segue destination="sr9-JX-sDG" kind="presentation" identifier="detailQuote" modalTransitionStyle="flipHorizontal" id="esk-8h-vod"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -71,16 +71,24 @@
                         <constraints>
                             <constraint firstItem="hpF-gR-J08" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="2qZ-ad-yde"/>
                             <constraint firstAttribute="trailingMargin" secondItem="hpF-gR-J08" secondAttribute="trailing" constant="-16" id="Edl-vH-eTc"/>
-                            <constraint firstItem="hpF-gR-J08" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="azm-HZ-3Ow"/>
+                            <constraint firstItem="hpF-gR-J08" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="-64" id="azm-HZ-3Ow"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="hpF-gR-J08" secondAttribute="bottom" id="jjo-cI-UEX"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Quotables" id="QTF-dR-BRJ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="aUu-iC-LkI">
+                            <connections>
+                                <segue destination="sr9-JX-sDG" kind="presentation" identifier="addQuote" id="mQZ-Yt-iAq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableQuotes" destination="hpF-gR-J08" id="r21-hm-7ZO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1137" y="375"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="u9p-gN-EWS">
@@ -184,7 +192,28 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fwc-nT-F0B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1337" y="303"/>
+            <point key="canvasLocation" x="2151" y="375"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7og-3Q-CPs">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6ud-Dy-eC3" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Lu6-Ht-4FD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="yLc-Hy-UWr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aab-yD-SM8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137" y="375"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="mQZ-Yt-iAq"/>
+    </inferredMetricsTieBreakers>
 </document>
