--- a/Quotables/Base.lproj/Main.storyboard
+++ b/Quotables/Base.lproj/Main.storyboard
@@ -77,6 +77,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Quotables" id="QTF-dR-BRJ">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="aUu-iC-LkI">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <segue destination="sr9-JX-sDG" kind="presentation" identifier="addQuote" id="mQZ-Yt-iAq"/>
                             </connections>
