--- a/Quotables/Base.lproj/Main.storyboard
+++ b/Quotables/Base.lproj/Main.storyboard
@@ -142,25 +142,25 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gzU-oc-Z1A">
-                                <rect key="frame" x="16" y="557" width="89" height="35"/>
+                                <rect key="frame" x="16" y="296" width="53" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="6Xo-ug-Gnh"/>
-                                    <constraint firstAttribute="width" constant="89" id="ub9-no-V9b"/>
+                                    <constraint firstAttribute="height" constant="35" id="F96-Wc-w6Y"/>
+                                    <constraint firstAttribute="width" constant="53" id="nYf-NP-I8X"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Palatino-Bold" family="Palatino" pointSize="20"/>
-                                <state key="normal" title="DISMISS">
+                                <state key="normal" title="SAVE">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="onButtonDismissTap:" destination="sr9-JX-sDG" eventType="touchUpInside" id="hJq-IK-KeL"/>
+                                    <action selector="onButtonSaveTap:" destination="sr9-JX-sDG" eventType="touchUpInside" id="acl-pN-LSB"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="09A-lb-flf">
-                                <rect key="frame" x="505" y="557" width="79" height="35"/>
+                                <rect key="frame" x="505" y="296" width="79" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="2Zk-v4-pF5"/>
-                                    <constraint firstAttribute="width" constant="79" id="rZZ-1K-7Q0"/>
+                                    <constraint firstAttribute="height" constant="35" id="TMF-wE-7hf"/>
+                                    <constraint firstAttribute="width" constant="79" id="cnQ-dM-gfO"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Palatino-Bold" family="Palatino" pointSize="20"/>
                                 <state key="normal" title="DELETE">
@@ -171,23 +171,40 @@
                                     <action selector="onButtonDeleteTap:" destination="sr9-JX-sDG" eventType="touchUpInside" id="DPH-07-YEh"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kGM-BO-j6s">
+                                <rect key="frame" x="95" y="296" width="86" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="86" id="LO1-V6-98P"/>
+                                    <constraint firstAttribute="height" constant="35" id="fFd-8N-Hmd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Palatino-Bold" family="Palatino" pointSize="20"/>
+                                <state key="normal" title="CANCEL">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onButtonCancelTap:" destination="sr9-JX-sDG" eventType="touchUpInside" id="dl2-Mu-OWc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.21848529929999999" green="0.3107843086" blue="0.38008432539999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="6CZ-G0-NNV" firstAttribute="top" secondItem="09A-lb-flf" secondAttribute="bottom" constant="8" id="0er-be-edV"/>
                             <constraint firstItem="Yn8-7c-hIU" firstAttribute="top" secondItem="2EB-Rv-Ghk" secondAttribute="bottom" id="26p-kQ-6fl"/>
                             <constraint firstItem="cOQ-SV-LZM" firstAttribute="leading" secondItem="EQC-Cn-jcY" secondAttribute="leadingMargin" id="7IG-vN-ch2"/>
                             <constraint firstItem="WM5-8w-rpB" firstAttribute="leading" secondItem="EQC-Cn-jcY" secondAttribute="leadingMargin" id="CSj-Oo-4y2"/>
                             <constraint firstItem="3hD-91-fdR" firstAttribute="trailing" secondItem="EQC-Cn-jcY" secondAttribute="trailingMargin" id="Ixj-9G-MWB"/>
+                            <constraint firstItem="gzU-oc-Z1A" firstAttribute="top" secondItem="WM5-8w-rpB" secondAttribute="bottom" constant="8" id="NK2-Wx-cn8"/>
+                            <constraint firstItem="kGM-BO-j6s" firstAttribute="leading" secondItem="gzU-oc-Z1A" secondAttribute="trailing" constant="26" id="Nar-ps-f5l"/>
                             <constraint firstItem="3hD-91-fdR" firstAttribute="leading" secondItem="EQC-Cn-jcY" secondAttribute="leadingMargin" id="OEa-We-q69"/>
                             <constraint firstItem="Yn8-7c-hIU" firstAttribute="leading" secondItem="EQC-Cn-jcY" secondAttribute="leadingMargin" id="RFZ-wQ-uJC"/>
                             <constraint firstItem="WM5-8w-rpB" firstAttribute="trailing" secondItem="EQC-Cn-jcY" secondAttribute="trailingMargin" id="Z7T-B6-rB6"/>
-                            <constraint firstItem="6CZ-G0-NNV" firstAttribute="top" secondItem="gzU-oc-Z1A" secondAttribute="bottom" constant="8" id="bV2-Vf-ohv"/>
-                            <constraint firstItem="gzU-oc-Z1A" firstAttribute="leading" secondItem="EQC-Cn-jcY" secondAttribute="leadingMargin" id="bWt-Ts-sUy"/>
+                            <constraint firstItem="09A-lb-flf" firstAttribute="trailing" secondItem="EQC-Cn-jcY" secondAttribute="trailingMargin" id="cU6-RP-YfZ"/>
+                            <constraint firstItem="gzU-oc-Z1A" firstAttribute="leading" secondItem="EQC-Cn-jcY" secondAttribute="leadingMargin" id="fRL-rc-X00"/>
                             <constraint firstItem="WM5-8w-rpB" firstAttribute="top" secondItem="cOQ-SV-LZM" secondAttribute="bottom" constant="6" id="fdr-eq-etB"/>
                             <constraint firstItem="3hD-91-fdR" firstAttribute="top" secondItem="Yn8-7c-hIU" secondAttribute="bottom" constant="8" id="hJe-BZ-hwL"/>
+                            <constraint firstItem="kGM-BO-j6s" firstAttribute="top" secondItem="WM5-8w-rpB" secondAttribute="bottom" constant="8" id="lcm-FH-3JV"/>
                             <constraint firstItem="cOQ-SV-LZM" firstAttribute="top" secondItem="3hD-91-fdR" secondAttribute="bottom" constant="11" id="rM8-H7-OoG"/>
-                            <constraint firstItem="09A-lb-flf" firstAttribute="trailing" secondItem="EQC-Cn-jcY" secondAttribute="trailingMargin" id="xTf-i4-R4g"/>
+                            <constraint firstItem="09A-lb-flf" firstAttribute="top" secondItem="WM5-8w-rpB" secondAttribute="bottom" constant="8" id="tk4-dD-oBG"/>
                         </constraints>
                     </view>
                     <connections>
