--- a/QuotablesToday/MainInterface.storyboard
+++ b/QuotablesToday/MainInterface.storyboard
@@ -26,10 +26,26 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k3X-xu-K2x">
-                                <rect key="frame" x="150" y="122" width="81" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QsR-Zf-ASh">
+                                <rect key="frame" x="231" y="122" width="73" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="81" id="loC-7b-A6p"/>
+                                    <constraint firstAttribute="width" constant="73" id="NxO-MJ-fen"/>
+                                    <constraint firstAttribute="height" constant="30" id="ede-F7-AhP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="15"/>
+                                <state key="normal" title="Edit Quote">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onEditButtonTap:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="zxS-Bv-d4Y"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k3X-xu-K2x">
+                                <rect key="frame" x="16" y="122" width="81" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="81" id="80u-Sx-dBS"/>
+                                    <constraint firstAttribute="height" constant="30" id="XlI-uA-p4a"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="15"/>
                                 <state key="normal" title="Save Quote">
@@ -43,10 +59,11 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="Oqf-5K-5Wu" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="44v-ho-0Ot"/>
-                            <constraint firstItem="k3X-xu-K2x" firstAttribute="trailing" secondItem="S3S-Oj-5AN" secondAttribute="trailingMargin" constant="-73" id="DZE-7b-ZBd"/>
-                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="k3X-xu-K2x" secondAttribute="bottom" constant="8" id="G2v-0o-Ut2"/>
-                            <constraint firstItem="k3X-xu-K2x" firstAttribute="top" secondItem="Oqf-5K-5Wu" secondAttribute="bottom" constant="8" id="P1b-f2-QK2"/>
+                            <constraint firstItem="QsR-Zf-ASh" firstAttribute="trailing" secondItem="S3S-Oj-5AN" secondAttribute="trailingMargin" id="Hla-uh-o7z"/>
+                            <constraint firstItem="QsR-Zf-ASh" firstAttribute="top" secondItem="Oqf-5K-5Wu" secondAttribute="bottom" constant="8" id="OBb-no-t8i"/>
+                            <constraint firstItem="k3X-xu-K2x" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="g6I-Xp-bwG"/>
                             <constraint firstItem="Oqf-5K-5Wu" firstAttribute="trailing" secondItem="S3S-Oj-5AN" secondAttribute="trailingMargin" constant="-19" id="jCA-cz-VR7"/>
+                            <constraint firstItem="k3X-xu-K2x" firstAttribute="top" secondItem="Oqf-5K-5Wu" secondAttribute="bottom" constant="8" id="jtE-lB-1ie"/>
                             <constraint firstItem="Oqf-5K-5Wu" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="8" id="orW-hq-C65"/>
                         </constraints>
                     </view>
